@@ -3,6 +3,7 @@ Hash: SHA1
 
 DIST IO-Compress-Base-2.001.tar.gz 89656 RMD160 72311494464d23adb05488d0e6d2982e660386ba SHA1 614a16fb645e0a990e603c267e9aa932fd3720f4 SHA256 cdd7d7982b311f096fba710e85425797be0e43d70d8f171fb5c835565c33e892
 DIST IO-Compress-Base-2.002.tar.gz 90194 RMD160 4f6f5e0c10f819db7404aed9141de1cd6b6909a1 SHA1 b73f20d2a42e625d35b761741c704fe50e3e9b16 SHA256 948a664295c2e91468ababb4c38d90f7dce563cc6aed43a97e7ccdc55e0498c9
+DIST IO-Compress-Base-2.003.tar.gz 90536 RMD160 4460a20f846867dc9c22c09812cd67e378f2dcc0 SHA1 909e83969fe514e3dba2de3e407ace30735ecbbd SHA256 3be2e2c0df77fbb7c0474465464385895866160beeb010cc6e352f75ae332631
 EBUILD IO-Compress-Base-2.001.ebuild 602 RMD160 cf2ad56fc9171cc3873d7de844460a8ec75257a1 SHA1 2e7d91e566add45ff0fdad91d88a54323a09cee6 SHA256 467fae4e7c28075697f6f65e14de2240aee0e6b42044a3c0f54a96b5230d1b22
 MD5 668c207589a23370d57b28ab29b9635a IO-Compress-Base-2.001.ebuild 602
 RMD160 cf2ad56fc9171cc3873d7de844460a8ec75257a1 IO-Compress-Base-2.001.ebuild 602
@@ -11,10 +12,14 @@ EBUILD IO-Compress-Base-2.002.ebuild 611 RMD160 b9c501b16ed33f0398ac7c98ff8b95b1
 MD5 98461889bd898ce750f5f166385094b5 IO-Compress-Base-2.002.ebuild 611
 RMD160 b9c501b16ed33f0398ac7c98ff8b95b11d5ef074 IO-Compress-Base-2.002.ebuild 611
 SHA256 282c7ce764c36bc2b795fdfb4b1fe32c75aed83a3f684e19499c3a503c2d8bd0 IO-Compress-Base-2.002.ebuild 611
-MISC ChangeLog 1499 RMD160 032041f2fab2d53b7f5981b86d0113c0ff285392 SHA1 11369a914589e02801548ef1d4a2e10786effb54 SHA256 5078278b218504d3cbbf29708530814adde8f32a19ee852e0bc38384ca640934
-MD5 93a8a28d96eeacb21b93751b66b7b38b ChangeLog 1499
-RMD160 032041f2fab2d53b7f5981b86d0113c0ff285392 ChangeLog 1499
-SHA256 5078278b218504d3cbbf29708530814adde8f32a19ee852e0bc38384ca640934 ChangeLog 1499
+EBUILD IO-Compress-Base-2.003.ebuild 611 RMD160 95c8fe596c2cd94b49aee75ab0ded2e27d1b0312 SHA1 8df58726ea460ba621a904be893a385157c0e5b2 SHA256 437a48826c92eb1edb313a1f6d9a435661d492d9a619a3c1ad2793d922331464
+MD5 705f8ef62548c3914090917c67560d57 IO-Compress-Base-2.003.ebuild 611
+RMD160 95c8fe596c2cd94b49aee75ab0ded2e27d1b0312 IO-Compress-Base-2.003.ebuild 611
+SHA256 437a48826c92eb1edb313a1f6d9a435661d492d9a619a3c1ad2793d922331464 IO-Compress-Base-2.003.ebuild 611
+MISC ChangeLog 1643 RMD160 cd3a6b8e5f5ecb5993d601156dd0e158a419b61d SHA1 75530a676c4b9c36f2de2b864ce4b0d604afe18c SHA256 31064d48a4c4d63b50f66189a7ba6d0e6f422a1c6ac8bdc5c49b1a06ce722537
+MD5 14732c42cfd725b6a45a1d598d83b3c1 ChangeLog 1643
+RMD160 cd3a6b8e5f5ecb5993d601156dd0e158a419b61d ChangeLog 1643
+SHA256 31064d48a4c4d63b50f66189a7ba6d0e6f422a1c6ac8bdc5c49b1a06ce722537 ChangeLog 1643
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -25,10 +30,13 @@ SHA256 ec747c923e65d1cad6d0e2775b09ec78a0a6cd5ed74309bcc00f6311132dfe5e files/di
 MD5 08deb13c67dee9ee87204bdaf71e4876 files/digest-IO-Compress-Base-2.002 265
 RMD160 d180534ef0f8172235cd7b2ec6e0b541eddba618 files/digest-IO-Compress-Base-2.002 265
 SHA256 b869fb3771636d641f68a0a76d7f1cc0a5abe147f9de41f8ff4c980eebf49b07 files/digest-IO-Compress-Base-2.002 265
+MD5 6acb0dd9a7a9362091c4d9245f9da465 files/digest-IO-Compress-Base-2.003 265
+RMD160 82d657089fe62a3817a4eb796e9bab81ea2d5981 files/digest-IO-Compress-Base-2.003 265
+SHA256 2ecc36ac9512a683609addc03c5ffb9df1052499ff0cbba0d5a6e2d385fb4649 files/digest-IO-Compress-Base-2.003 265
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFFmmQUtG5z4I8BtQoRAhqaAJ9dPBkcw1lCDHeBBY8YGZA7yICDfACfW574
-0NnH5DSutaiZjlbG11ylo0Y=
-=Pj/C
+iD4DBQFFnq91tG5z4I8BtQoRAnkPAJdsCFy9/lPp00vwne725S9rfNoOAJ4pkvRS
+EMI+u7t1jrLAYL5WgWNg9w==
+=cdYS
 -----END PGP SIGNATURE-----
