@@ -1,0 +1,3 @@
+MD5 7927ee59cc3c16609397be1d7d32ba01 IO-Compress-Base-2.003.tar.gz 90536
+RMD160 4460a20f846867dc9c22c09812cd67e378f2dcc0 IO-Compress-Base-2.003.tar.gz 90536
+SHA256 3be2e2c0df77fbb7c0474465464385895866160beeb010cc6e352f75ae332631 IO-Compress-Base-2.003.tar.gz 90536
